# resume-brain

./: .env.example  .gitignore  CLAUDE.md  EXPLAIN.md  LICENSE  PROJECT_INDEX.json  PROJECT_INDEX.md  README.md  docker-compose.yml  package-lock.json  plan.md  render.yaml  requirements-training.txt  train_all.bat  train_all.ps1  train_all.sh
.github/workflows/: ci.yml  deploy-pages.yml  desktop-release.yml
backend/: Dockerfile  Dockerfile.render  build_exe.py  config.py  main.py  plan-2-nlp-overhaul.md  requirements-render.txt  requirements.txt  resume-brain.spec
backend/api/: dependencies.py  router.py
backend/models/: requests.py  responses.py
backend/services/: gemini_client.py  keyword_extractor.py  pdf_parser.py  prompt_builder.py  resume_analyzer.py  resume_ner.py  section_parser.py  similarity.py  skill_extractor.py
backend/tests/: conftest.py  test_api.py  test_kaggle_category_eval.py  test_keyword_extractor.py  test_pdf_parser.py  test_real_resumes_eval.py  test_resume_ner.py  test_section_parser.py  test_similarity.py  (+2 more)
desktop/: package-lock.json  package.json  setup-sidecar.ps1  setup-sidecar.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
frontend/: .env.production  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
mobile/: capacitor.config.ts  package.json
training/: PLAN.md  colab_train_m2.ipynb  colab_train_m3.ipynb  download_datasets.py  kaggle_train_m2.ipynb  kaggle_train_m3.ipynb
(+76 files in other folders)
