[package]
name = "resume-brain-desktop"
version = "1.0.0"
description = "Resume Brain desktop app with bundled ML backend"
authors = ["Resume Brain"]
edition = "2021"

[lib]
name = "resume_brain_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
